	- regenerate with Automake 1.11.6.
	- use LF line endings throughout the sources.
	- convert README to UTF-8.
	- fix some spelling errors (or at least, infrequent forms) reported by Lintian (through Albert "alberthro" Huang) and rpmlint (through TC01).
	- fixes for i18n problems reported by Benjamin Moody.
	- add the keypresses command to libticables' hex2nsp.

- 14/12/2011, version 1.3.3: debrouxl
	- more fixes in the libusb 1.0 backend, following the introduction of the asynchronous code.
	- update CONFIG once more, to keep up with changes in udev...
	- add several messages in the Linux device detection code, and unify / update messages and translations.
	- eliminate explicit usage of stdout.
	- upgrade COPYING files and FSF addresses embedded in files, so as to make rpmlint happier.
	- upgrade libusb-win32 and INF files to a version that 1) allows stable use of the filter driver and 2) makes Nspire support useful again on Windows. Cleanup the tree.
	- reconfigure with autoconf 2.68 and libtool 2.4.
	- reconfigure with libtool 2.4.2.
	- take a whack at hundreds of NULL pointer dereferences by sanitizing function arguments.
	- fix multiple global buffer overflows in normal usage spotted by AddressSanitizer; comment several unused functions.
	- move the workaround for file transfers of peculiar sizes mainly to libticalcs.
	- port the change to file transfers of peculiar sizes from the libusb 0.1.x to the libusb 1.x backend.
	- upgrade version of gettext to 0.17, released in late 2007.

- 28/05/2011, version 1.3.2: debrouxl
	- remove autogenerated Changelog files and empty TRANSLATORS files.
	- change encoding in .rc file.
	- compiler warning fixes
	- Sync src/bsd with src/linux
	- Include <stdlib.h> (calloc,free) from link_usb.c
	- Parallel port works differently on *BSD than Linux.
	- add Nspire 2.x OS support, based on patch by Brian Johnson (SF bug #3001104).