@@ -259,4 +259,5 @@ const CableFncts cable_vti =
 	&vti_put, &vti_get, &vti_check,
 	&vti_set_red_wire, &vti_set_white_wire,
 	&vti_get_red_wire, &vti_get_white_wire,
+	NULL, NULL
 };
