@@ -309,6 +309,18 @@ static int par_get_white_wire(CableHandle *h)
 	return (0x20 & io_rd(lpt_in)) ? 1 : 0;
 }
 
+static int par_set_raw(CableHandle *h, int state)
+{
+	io_wr(lpt_out, swap_bits(state));
+	return 0;
+}
+
+static int par_get_raw(CableHandle *h, int *state)
+{
+	*state = (io_rd(lpt_in) >> 4) & 3;
+	return 0;
+}
+
 const CableFncts cable_par = 
 {
 	CABLE_PAR,
@@ -321,4 +333,5 @@ const CableFncts cable_par =
 	&par_put, &par_get, &par_check,
 	&par_set_red_wire, &par_set_white_wire,
 	&par_get_red_wire, &par_get_white_wire,
+	&par_set_raw, &par_get_raw
 };
