@@ -323,6 +323,18 @@ static int ser_get_white_wire(CableHandle *h)
 	return ((0x20 & io_rd(com_in)) ? 1 : 0);
 }
 
+static int ser_set_raw(CableHandle *h, int state)
+{
+	io_wr(com_out, swap_bits(state));
+	return 0;
+}
+
+static int ser_get_raw(CableHandle *h, int *state)
+{
+	*state = (io_rd(com_in) >> 4) & 3;
+	return 0;
+}
+
 const CableFncts cable_ser = 
 {
 	CABLE_BLK,
@@ -335,4 +347,5 @@ const CableFncts cable_ser =
 	&ser_put, &ser_get, &ser_check,
 	&ser_set_red_wire, &ser_set_white_wire,
 	&ser_get_red_wire, &ser_get_white_wire,
+	&ser_set_raw, &ser_get_raw
 };
