@@ -11,6 +11,7 @@ Log of changes (libticables):
 	- fix some spelling errors (or at least, infrequent forms) reported by Lintian (through Albert "alberthro" Huang) and rpmlint (through TC01).
 	- fixes for i18n problems reported by Benjamin Moody.
 	- add the keypresses command to libticables' hex2nsp.
+	- improved support for "raw mode" external linking, by Benjamin Moody, thanks to two new functions for getting and setting both lines simultaneously.
 
 - 14/12/2011, version 1.3.3: debrouxl
 	- more fixes in the libusb 1.0 backend, following the introduction of the asynchronous code.
